@@ -1,3 +1,7 @@
+1999-11-25  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* poe-18.el (current-time-string, current-time): New functions.
+
 1999-11-11  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* localhook.el, pcustom.el: checkdoc.
